home, serv inn, logo

--- a/src/components/Layout/Header/Header.sass
+++ b/src/components/Layout/Header/Header.sass
@@ -21,4 +21,6 @@
   display: grid
   grid-template-columns: 5fr 2fr 5fr
   @include media-breakpoint-down(lg)
-    grid-template-columns: 1fr
+    display: flex
+    align-items: center
+    justify-content: center
