--- a/src/components/Ui/Ui.sass
+++ b/src/components/Ui/Ui.sass
@@ -3,6 +3,7 @@
 @import './CoverDefault/CoverDefault'
 @import './SectionHeader/SectionHeader'
 @import './SectionHeaderMain/SectionHeaderMain'
+@import './SectionMarker/SectionMarker'
 @import './DefaultSlider/DefaultSlider'
 @import './LightBox/LightBox'
 @import './AsideDefault/AsideDefault'
