--- a/src/components/Pages/Fund/FundDonate/FundDonateItems/DonateThank/DonateThank.sass
+++ b/src/components/Pages/Fund/FundDonate/FundDonateItems/DonateThank/DonateThank.sass
@@ -1,3 +1,36 @@
 .donate-thank__wrapper
   grid-area: d
   order: 4
+  @include media-breakpoint-down(md)
+
+
+.donate-thank__content
+  width: 100%
+  height: 100%
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+  text-align: center
+  @include media-breakpoint-down(md)
+    padding: 40px 0
+
+.donate-thank__icon
+  display: block
+  width: 130px
+  height: auto
+  @media screen and ( max-width: $page-wrapper )
+    width: calc( 90px + (130 - 90) * ((100vw - 320px) / (1440 - 320))) 
+
+.donate-thank__title
+  display: block
+  font-size: 16px
+  line-height: 120%
+  font-weight: 700
+  text-transform: uppercase
+  color: $gold
+  margin-top: 20px
+  @media screen and ( max-width: $page-wrapper )
+    font-size: calc( 12px + (16 - 12) * ((100vw - 320px) / (1440 - 320))) 
+  @include media-breakpoint-down(md)
+    font-size: 14px
