--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -16,6 +16,7 @@
 @import '../components/Pages/About/About'
 @import '../components/Pages/Services/Services'
 @import '../components/Pages/ServicesInner/ServicesInner'
+@import '../components/Pages/Works/Works'
 
 
 
@@ -33,8 +34,7 @@ body
   position: relative
   width: 100%
   max-width: 100%
-  min-height: 100vh
-  min-height: -webkit-fill-available
+  height: 100%
   overflow-x: hidden
   scroll-behavior: smooth
   overscroll-behavior-y: none
@@ -49,12 +49,20 @@ body
   font-size: 16px
   overflow-x:hidden
 
+#___gatsby
+  height: 100%
+
+#gatsby-focus-wrapper
+  height: 100%
+
 
 ul
   padding: 0
   margin: 0
   li
     list-style: none
+
+
 
 button
   background-color: transparent
