--- a/src/components/Layout/layout.sass
+++ b/src/components/Layout/layout.sass
@@ -1,2 +1,9 @@
 @import './Header/Header'
 @import './Footer/Footer'
+
+.app-container
+  min-height: 100%
+  display: flex
+  flex-direction: column
+  main
+    flex: 1 1 auto
