--- a/src/components/Pages/ServicesInner/ServicesInfo/ServicesInfo.sass
+++ b/src/components/Pages/ServicesInner/ServicesInfo/ServicesInfo.sass
@@ -1,1 +1,32 @@
 @import './ServicesInfoItem/ServicesInfoItem'
+
+.service-inner__mark
+  p
+    font-size: 15px
+    line-height: 25px
+    margin-bottom: 30px
+    &:last-child
+      margin-bottom: 0
+  ul
+    margin-bottom: 30px
+    padding-left: 20px
+    &:last-child
+      margin-bottom: 0
+    li
+      padding: 6px 0 6px 20px
+      list-style: disc
+      p
+        font-size: 15px
+        line-height: 25px
+        margin-bottom: 0
+  ol
+    margin-bottom: 30px
+    padding-left: 15px
+    &:last-child
+      margin-bottom: 0
+    li 
+      padding: 6px 0 6px 20px
+      p
+        font-size: 15px
+        line-height: 25px
+        margin-bottom: 0
