Contacts page add

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -17,6 +17,7 @@
 @import '../components/Pages/Services/Services'
 @import '../components/Pages/ServicesInner/ServicesInner'
 @import '../components/Pages/Works/Works'
+@import '../components/Pages/Contacts/Contacts'
 
 
 
