--- a/src/components/Pages/Works/WorksItem/WorksItem.sass
+++ b/src/components/Pages/Works/WorksItem/WorksItem.sass
@@ -3,6 +3,8 @@
 
 .works-item__cover-wrapper
   position: relative
+  width: 100%
+  height: 100%
   &::before
     content: ''
     position: absolute
@@ -12,6 +14,10 @@
     height: 100%
     background: rgba(2,2,2,.7)
     z-index: 2
+
+.works-item__cover
+  width: 100%
+  height: 100%
 
 .works-item__title
   display: block
