--- a/src/components/Ui/LightBox/LightBox.sass
+++ b/src/components/Ui/LightBox/LightBox.sass
@@ -76,9 +76,7 @@
     height: 60px
   &:disabled
     color: #7d7d7d
-  &:hover
-    .popup-close__button-icon
-      transform: rotate(180deg)
+
 
 .light-box__arrow
   pointer-events: auto
@@ -106,4 +104,9 @@
   right: 0
 
 .light-box-close
+  svg
+    width: 16px
+    height: 16px
+    path 
+      fill: $gold
   
