donate data and donate ui fix

--- a/src/components/Pages/Fund/FundDonate/FundDonateItems/DonateThank/DonateThank.sass
+++ b/src/components/Pages/Fund/FundDonate/FundDonateItems/DonateThank/DonateThank.sass
@@ -1,7 +1,44 @@
 .donate-thank__wrapper
+  display: flex
+  flex-direction: column
+  justify-content: space-between
   grid-area: d
   order: 4
   @include media-breakpoint-down(md)
+
+.donate-thank__heart
+  background: $brown
+  display: flex
+  align-items: center
+  justify-content: center
+  margin-bottom: 40px
+  padding: 60px
+  height: 50%
+  @media screen and ( max-width: $page-wrapper )
+    padding: calc( 20px + (60 - 20) * ((100vw - 320px) / (1440 - 320))) 
+  @include media-breakpoint-down(lg)
+    padding: 30px
+    margin-bottom: 20px
+  @include media-breakpoint-down(md)
+    margin-bottom: 0
+    padding: 40px 30px 0 30px
+
+.donate-thank__title--wrapper
+  background: $brown
+  display: flex
+  align-items: center
+  justify-content: center
+  text-align: center
+  padding: 60px
+  height: 50%
+  @media screen and ( max-width: $page-wrapper )
+    padding: calc( 20px + (60 - 20) * ((100vw - 320px) / (1440 - 320))) 
+  @include media-breakpoint-down(lg)
+    padding: 30px
+  @include media-breakpoint-down(md)
+    padding: 0px 30px 40px 30px
+
+
 
 
 .donate-thank__content
