--- a/src/components/Pages/Fund/FundDonate/FundDonateItems/FundDonateItems.sass
+++ b/src/components/Pages/Fund/FundDonate/FundDonateItems/FundDonateItems.sass
@@ -23,3 +23,6 @@
     padding: 30px
   @include media-breakpoint-down(md)
     grid-area: auto
+  &.donate-thank__wrapper
+    background: transparent
+    padding: 0
