--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -12,6 +12,7 @@
 
 @import '../components/Pages/Home/Home'
 @import '../components/Pages/Fund/Fund'
+@import '../components/Pages/CaseTemplate/CaseTemplate'
 @import '../components/Pages/Price/Price'
 @import '../components/Pages/About/About'
 @import '../components/Pages/Services/Services'
