Case inner page

--- a/src/components/Pages/CaseTemplate/CaseTemplate.sass
+++ b/src/components/Pages/CaseTemplate/CaseTemplate.sass
@@ -1,5 +1,7 @@
 @import './CaseAside/CaseAside'
 @import './CaseInfo/CaseInfo'
+@import './CaseInnerGallery/CaseInnerGallery'
+@import './CaseInnerVideo/CaseInnerVideo'
 
   
 .case-inner__page
