--- a/src/components/Layout/Header/HeaderLogo/HeaderLogo.sass
+++ b/src/components/Layout/Header/HeaderLogo/HeaderLogo.sass
@@ -21,6 +21,10 @@
     transform: scale(1.615)
     @include media-breakpoint-down(lg)
       transform: scale(1)
+  &.case
+    width: 180px
+  &.case
+    transform: scale(1)
   &.is-active
     transform: scale(1)
 
